# mind-spider

./: .env.example  .gitignore  API.md  CLAUDE.md  DASHBOARD.md  DEPLOYMENT.md  HOTSPOT_METHODOLOGY.md  LICENSE  PHASE_1_2_PLAN.md  PHASE_2_PLAN.md  PLATFORM_DEBUG_NOTES.md  README-RAW.md  README.md  REMOTE_SERVER.md  START.md  TOPIC_MATCHER_DESIGN.md  config.py  config.py.example  debug_tieba_search.html  main.py  ms_config.py  ms_config.py.example  pyproject.toml  requirements.txt  test_log.txt
BroadTopicExtraction/: database_manager.py  start.bat  start_scheduler.py  topic_extractor.py
BroadTopicExtraction/admin/: __init__.py  api.py  app.py  log_reader.py  metrics.py  templates.py
BroadTopicExtraction/aggregators/: __init__.py  anyknew.py  base.py  jiucai.py  mofish.py  newsnow.py  official.py  rebang.py  registry.py  rsshub.py  tophub.py
BroadTopicExtraction/analyzer/: __init__.py  candidate_manager.py  data_reader.py  signal_detector.py
BroadTopicExtraction/config/: filters.yaml  platforms.yaml  schedule.yaml
BroadTopicExtraction/config/sources/: hot_local.yaml  hot_national.yaml  hot_vertical.yaml  media.yaml  wechat.yaml
BroadTopicExtraction/crawlers/: scrapy.cfg
BroadTopicExtraction/crawlers/mindspider_crawlers/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
BroadTopicExtraction/crawlers/mindspider_crawlers/spiders/: __init__.py  base.py
BroadTopicExtraction/crawlers/mindspider_crawlers/spiders/hot_local/: __init__.py  tianyan.py
BroadTopicExtraction/crawlers/mindspider_crawlers/spiders/hot_vertical/: cls.py  (+6 more)
BroadTopicExtraction/pipeline/: __init__.py  config_loader.py  mongo_writer.py  processor.py
BroadTopicExtraction/scheduler/: __init__.py  runner.py  scheduler.py
DeepSentimentCrawling/: alert.py  cookie_manager.py  dispatcher.py  keyword_manager.py  login_console.py  platform_crawler.py  start_deep_crawl.py  task_queue.py  topic_matcher.py  worker.py
DeepSentimentCrawling/MediaCrawler/: requirements.txt  var.py
DeepSentimentCrawling/MediaCrawler/config/: base_config.py  db_config.py
DeepSentimentCrawling/MediaCrawler/database/: models.py
DeepSentimentCrawling/MediaCrawler/media_platform/bilibili/: client.py  core.py
DeepSentimentCrawling/MediaCrawler/media_platform/douyin/: client.py  core.py  help.py
DeepSentimentCrawling/MediaCrawler/media_platform/kuaishou/: client.py  core.py  graphql.py
DeepSentimentCrawling/MediaCrawler/media_platform/tieba/: client.py  core.py  help.py
DeepSentimentCrawling/MediaCrawler/media_platform/weibo/: client.py  core.py
DeepSentimentCrawling/MediaCrawler/media_platform/xhs/: core.py
DeepSentimentCrawling/MediaCrawler/media_platform/zhihu/: core.py  help.py
DeepSentimentCrawling/MediaCrawler/store/bilibili/: __init__.py  _store_impl.py
DeepSentimentCrawling/MediaCrawler/store/douyin/: __init__.py
DeepSentimentCrawling/MediaCrawler/store/kuaishou/: __init__.py
DeepSentimentCrawling/MediaCrawler/store/tieba/: __init__.py
DeepSentimentCrawling/MediaCrawler/store/weibo/: __init__.py
DeepSentimentCrawling/MediaCrawler/store/xhs/: __init__.py  _store_impl.py
DeepSentimentCrawling/MediaCrawler/store/zhihu/: __init__.py
DeepSentimentCrawling/MediaCrawler/tools/: cdp_browser.py  utils.py
DeepSentimentCrawling/admin/: __init__.py  api.py  log_reader.py  metrics.py  templates.py
DeepSentimentCrawling/chrome_extension/: manifest.json  popup.css  popup.html  popup.js
deploy/: install_service.sh  mindspider-broad-crawl.service  mindspider-deep-crawl.service  mindspider-scheduler.service  setup.sh  update.sh
schema/: db_manager.py  init_database.py  mindspider_tables.sql  models_bigdata.py  models_sa.py  mongo_indexes.js
scripts/: check_dy_data.py  fix_cookie.py  insert_test_task.py  test_dy_comments.py  test_ks_comments.py  test_tieba_request.py  test_xhs_search.py
tests/: __init__.py  conftest.py
tests/BroadTopicExtraction/: __init__.py  test_aggregators.py  test_candidate_manager.py  test_candidate_unit.py  test_crawlers.py  test_data_reader_filters.py  test_pipeline.py  test_scheduler.py  test_signal_detector.py
tests/DeepSentimentCrawling/: test_deep_crawl_integration.py  test_deep_crawl_unit.py
(+23 files in other folders)
